# YGOPro3

./: .gitignore  import_locales.cjs  index.html  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
.ci/: rename.sh  tauri.conf.json.cjs  tauri.conf.json.py  update.py  update_ygopro3.py  upload.py  version.txt  write_version.py  zip.py
.ci/config/: cardinfo-en-US.toml  cardinfo-ja-JP.toml  cardinfo-ko-KR.toml  cardinfo-zh-CN..toml  cardinfo-zh-CN.toml  cardinfo-zh-TW.toml  extra_code.toml  resource.toml  room_model.toml  servers.toml  system.toml  textures.toml
.github/workflows/: assets.yml  build.yml  check.yml  mirror.yaml
src/: init.scss  init.vue  main.ts  tauri-ygo.vue  vite-env.d.ts
src-tauri/: Cargo.toml
src-tauri/android-custom/: AndroidManifest.xml
src-tauri/android-custom/java/cn/jwyxym/ygopro3/: MainActivity.kt
src-tauri/android-custom/java/pro/jwyxym/ygo3/: MainActivity.kt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  deck.rs  file.rs  game.rs  lib.rs  log.rs  main.rs  progress.rs  request.rs  windbot.rs  ygoserver.rs  ypk.rs  yrp.rs
src-tauri/src/api/: commands.rs
src-tauri/src/game/: card.rs  card_info.rs  cdb.rs  extra_code.rs  file.rs  font.rs  lflist.rs  model.rs  pic.rs  regex.rs  request.rs  resource.rs  server.rs  sound.rs  strings.rs  system.rs  textures.rs  version.rs  zip.rs
src-tauri/src/game/cdb/: async_db.rs  sync_db.rs
src-tauri/src/game/server/: server_ini.rs
src/script/: card.ts  constant.ts  fs.ts  game.ts  http.ts  invoke.ts  lflist.ts  scale.ts  (+1 more)
(+132 files in other folders)
