[package]
name = "YGOPro3"
version = "0.1.0"
description = "YGOPro by tauriv2.0"
authors = ["jwyxym"]
edition = "2024"

[lib]
name = "ygopro3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-tcp = "0.1.2"
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
zip = "0.6"
walkdir = "2.5.0"
ureq = "3.1.2"
trust-dns-resolver = "0.23.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
content_disposition = "0.4.0"
regex = "1.11.2"
chrono = "0.4.42"
anyhow = "1.0.100"
urlencoding = "2.1.3"
basic-toml = "0.1.10"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio-rusqlite = "0.7.0"
libsqlite3-sys = "0.35.0"
lazy_static = "1.5.0"
bincode = "2.0.0-rc.3"
indexmap = { version = "2.13.0", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
libloading = "0.9.0"
